fix: homepage transactions table header alignment

--- a/src/app/modules/dashboard/pages/home/home.component.css
+++ b/src/app/modules/dashboard/pages/home/home.component.css
@@ -40,3 +40,7 @@
 :host ca-table::ng-deep th {
   text-align: center;
 }
+
+:host ca-table::ng-deep th:nth-child(2) {
+  text-align: start;
+}
